--- a/novus/package.json
+++ b/novus/package.json
@@ -1,11 +1,10 @@
 {
   "name": "novus",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -18,13 +17,16 @@
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
     "expo": "~51.0.28",
+    "expo-dev-client": "^4.0.28",
     "expo-font": "^12.0.10",
     "expo-local-authentication": "^14.0.1",
     "expo-permissions": "^14.4.0",
     "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "^3.0.7",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-auth0": "^3.2.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
