--- a/novus/package.json
+++ b/novus/package.json
@@ -2,7 +2,7 @@
   "name": "novus",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start ",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -17,10 +17,8 @@
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
     "expo": "~51.0.28",
-    "expo-dev-client": "^4.0.28",
     "expo-font": "^12.0.10",
     "expo-local-authentication": "^14.0.1",
-    "expo-permissions": "^14.4.0",
     "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
